Update shell to PowerShell

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,10 +24,12 @@ jobs:
       - name: dotnet publish
         run: |
           & .\Create-Release.ps1
+        shell: pwsh
 
       # Run dotnet test
       - name: dotnet test
         run: dotnet test --no-build --configuration Release
+        shell: pwsh
 
       - name: Artifacts
         uses: actions/upload-artifact@v2
