Fix Workflow Folder Name and add support for Linux Build (#2)
Fix Workflow Folder Name and add support for Linux Build

Co-authored-by: Roy <royvou@hotmailcom>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,11 +23,8 @@ jobs:
       # Run dotnet build and publish
       - name: dotnet publish
         run: |
-          & .\Create-Release.ps1
-
-      # Run dotnet test
-      - name: dotnet test
-        run: dotnet test --no-build --configuration Release
+          & ./Create-Release.ps1
+        shell: pwsh
 
       - name: Artifacts
         uses: actions/upload-artifact@v2
